# nh-midi

./: README.md  nh-midi.cabal
Sound/NH/MIDI/: Core.hs  Parse.hs
