name:                nh-midi
version:             0.1.0.0
synopsis:            A simple library for working with streaming MIDI data
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
homepage:            https://www.github.com/n-heptane-lab/nh-midi
category:            Sound
build-type:          Simple
cabal-version:       >=1.10

source-repository head
    type:     git
    location: git://github.com/n-heptane-lab/nh-midi.git

library
  exposed-modules:     Sound.NH.MIDI.Core,
                       Sound.NH.MIDI.Parse
  build-depends:       base  >= 4.7 && < 4.13,
                       pipes >= 4.1 && < 4.4
  default-language:    Haskell2010

